@startuml
abstract class Token {
    + span : Span
    + {abstract} TokenId : TokenCONST <<get>>
}
class UnknownTk {
    + value : string
    + UnknownTk(value:string)
    + <<override>> TokenId : TokenCONST <<get>>
}
class IdentifierTk {
    + value : string
    + IdentifierTk(value:string)
    + <<override>> TokenId : TokenCONST <<get>>
}
class "EnumeratedTk`1"<T> {
    - <<readonly>> _tokenId : int
    + EnumeratedTk(value:TokenCONST)
    + <<override>> TokenId : TokenCONST <<get>>
}
class IntTk {
    + value : long
    + IntTk(value:long)
    + <<override>> TokenId : TokenCONST <<get>>
}
class RealTk {
    + value : double
    + RealTk(value:double)
    + <<override>> TokenId : TokenCONST <<get>>
}
class BoolTk {
    + value : bool
    + BoolTk(value:bool)
    + <<override>> TokenId : TokenCONST <<get>>
}
class CharTk {
    + value : char
    + CharTk(value:char)
    + <<override>> TokenId : TokenCONST <<get>>
}
class StringTk {
    + value : string
    + StringTk(value:string)
    + <<override>> TokenId : TokenCONST <<get>>
}
class Span {
    + LineNumber : long
    + StartPos : int
    + EndPost : int
    + Span(lineNumber:long, startPos:int, endPost:int)
}
Token <|-- UnknownTk
Token <|-- IdentifierTk
Token <|-- "EnumeratedTk`1"
Token <|-- IntTk
Token <|-- RealTk
Token <|-- BoolTk
Token <|-- CharTk
Token <|-- StringTk
@enduml
